--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ androidExtensions {
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "studio.bz_soft.games"
+        applicationId "com.eSport.advisor"
         minSdkVersion 22
         targetSdkVersion 28
         versionCode 1
